--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/index.scss">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="icon" href="favicon.svg" type="image/svg+xml">
     <title>ActiveBox</title>
 </head>
@@ -461,11 +462,15 @@
                     <p>Share with Love</p>
                 </div>
                 <div class="footer-social">
-                        <a href="">
-                            <img src="./assets/img/facebook_icon.svg" alt="facebook_icon">
+                        <a href="https://ru-ru.facebook.com/" target="_blank">
+                            <i class="fa-brands fa-facebook-f"></i>
                         </a>
-                        <a href=""><img src="./assets/img/twitter_icon.svg" alt="twitter_icon"></i></li></a>
-                        <a href=""><img src="./assets/img/linkedin_icon.svg" alt="linkedin_icon"></i></li></a>
+                        <a href="https://twitter.com/" target="_blank">
+                            <i class="fa-brands fa-twitter"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/" target="_blank">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
                 </div>
             </div>
             <div class="footer-item item__1">
@@ -482,7 +487,6 @@
                 Made with <a href="#">By Kamal Chaneman</a></p>
         </div>
     </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
